# robin

./: .dockerignore  .env.example  .gitignore  2026-05-17-1104-robin-agentphone-browseruse-launchpad-handoff.md  CLAUDE.md  DAY_PLAN.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
agentphone/: agentphone-notes.md
browseruse/: browseruse-notes.md
docs/: 2026-05-17-receptionist-cheat-card.md  2026-05-17-robin-05-runlog.md  2026-05-17-robin-pitch-deck.md  BANNER_PROMPT.md  CONTRIBUTING.md  RUNBOOK.md  RUNSHEET.md  agent-tuning-checkpoint.md  legal-citations-verified.md
scripts/: dial_selftest.py  provision.sh  receptionist_tts.sh  setup_agentphone.py  setup_moss_statutes.py  show_numbers.py  tunnel.md  tunnel.sh  validate_env.py  webhook_doctor.py  webhook_fix.py  webhook_selftest.py
tests/: conftest.py  fakes.py  test_agentmail.py  test_agentphone_client.py  test_anthropic_adapter.py  test_anthropic_safe_content.py  test_app.py  test_broadcast.py  test_call_maker_e2e.py  test_classifier.py  test_config.py  test_context_pack.py  test_dashboard_wiring.py  test_event_bus.py  test_extensions.py  test_loop.py  test_loop_history_sanitize.py  test_loop_streaming.py  test_main_composition.py  test_main_wiring.py  test_models.py  test_moss_search.py  test_ndjson.py  test_obs.py  test_outbound.py  test_outbound_dial.py  test_prompts.py  test_session.py  test_signature.py  test_stage.py  test_supermemory.py  test_tools.py  test_webhook_discovery.py  test_webhook_gate.py
web/: flow.html  (+2 more)
(+61 files in other folders)
