[project]
name = "robin"
version = "0.1.0"
description = "Robin — voice chief-of-staff (AgentPhone + Browser Use)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "anthropic>=0.40,<1.0",
  "httpx>=0.27,<1.0",
  "browser-use-sdk>=0.1",
  "svix>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --cov=robin --cov-report=term-missing"
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py311"
